# FM

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/: programmers_guide.md  user_manual.md
gui/: main_frame_template.cpp  main_frame_template.h
main/: file_manager.cpp  file_manager.h  main_frame.cpp  main_frame.h
